--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,10 @@ import Comparision from '../components/Comparision.astro';
 import Faq from '../components/Faq.astro';
 import Hero from '../components/Hero.astro';
 import Ctaone from '../components/Ctaone.astro';
+import { defaultLang } from '../i18n/config';
 
+// Redirect to default language
+return Astro.redirect(`/${defaultLang}`);
 ---
 
 <Layout 
